# snek

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: food.cpp  food.h  game.cpp  game.h  main.cpp
